--- a/src/index.css
+++ b/src/index.css
@@ -68,22 +68,23 @@ h6 {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 2.75rem;
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 h4 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 p {
+  font-size: 1.125rem; /* 18px body text */
   margin-bottom: 1rem;
   color: #525252;
 }
